--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +25,6 @@
     "@angular-devkit/build-angular": "~13.1.0-next.2",
     "@angular/cli": "~13.1.0-next.2",
     "@angular/compiler-cli": "~13.0.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
+    "@types/node": "^12.11.1"
   }
 }
