--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "@angular-devkit/build-angular": "~13.1.0-next.2",
     "@angular/cli": "~13.1.0-next.2",
     "@angular/compiler-cli": "~13.0.0",
-    "@types/node": "^12.11.1"
+    "@angular/language-service": "~13.0.2",
+    "@types/node": "^12.11.1",
+    "tuicss": "^2.1.1"
   }
 }
