--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ngneat/effects-ng": "^1.0.0-beta.0",
+    "@ngneat/elf": "^1.0.0-beta.5",
+    "@ngneat/elf-devtools": "^1.0.0-beta.4",
+    "@ngneat/elf-entities": "^1.0.0-beta.10",
+    "@ngneat/elf-requests": "^1.0.0-beta.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
